--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "pm2 start pm2.config.js",
+    "start-rabbit": "pm2 start ecosystem.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "purge": "node server/utils/deleteQueue.js",
     "delete": "pm2 delete all"
@@ -27,11 +28,13 @@
     "express": "^4.21.1",
     "kafka-node": "^5.0.0",
     "multer": "^1.4.5-lts.1",
+    "next": "^15.0.4",
     "node-tesseract-ocr": "^2.2.1",
     "open-google-translator": "^1.0.5",
     "pdfkit": "^0.15.1",
     "pm2": "^5.4.3",
-    "tesseract.js": "^5.1.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "cors": "^2.8.5"
